test: UserService 테스트 작성, 불필요한 응답 DTO 내용 일부 제거